--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-maps": "^0.19.0",
+    "react-native-maps-directions": "^1.6.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6"
   },
