--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-maps": "^0.19.0",
