--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-card-view": "0.0.3",
     "react-native-maps": "^0.19.0",
     "react-native-maps-directions": "^1.6.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.0.0-beta.21",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
