setting up ios environment

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-webview')
+    compile project(':react-native-photo-view')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-vector-icons')
 
     compile project(':react-native-maps')
     compile fileTree(dir: "libs", include: ["*.jar"])
