--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shoutem/ui": "^1.0.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-card-view": "0.0.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.19.0",
     "react-native-maps-directions": "^1.6.0",
     "react-native-vector-icons": "^4.6.0",
